# turtlesim_plus

./: README.md  dependencies_install.bash
turtlesim_plus/: CMakeLists.txt  package.xml  rosdep.yaml
turtlesim_plus/scripts/: pizza_on_click.py  turtlesim_plus_node.py
turtlesim_plus/turtlesim_plus/: entity.py  ros2_plugins.py
turtlesim_plus_interfaces/: CMakeLists.txt  package.xml
turtlesim_plus_interfaces/action/: GetData.action
turtlesim_plus_interfaces/msg/: ScannerData.msg  ScannerDataArray.msg
turtlesim_plus_interfaces/srv/: GivePosition.srv
